# ExHelper

./: README.md  pyproject.toml  test.py
src/exhelper/: Application.py  __main__.py
src/exhelper/assets/: __init__.py  data.sqlite3
src/exhelper/assets/themes/: Default.json
src/exhelper/controller/: Application.py  CheckDefectController.py  ComparisonController.py  Controller.py  __init__.py
src/exhelper/model/: AbstractModel.py  CheckClaimModel.py  CheckDefectModel.py  ClaimModel.py  ComparisonModel.py  ConfigModel.py  DescriptionModel.py  SearchModel.py  __init__.py
src/exhelper/utilities/: CTkLinkedCheckBoxes.py  CTkReadonlyTextbox.py  CTkTristateCheckBox.py  GroupedCheckBoxes.py  TriStateCTkCheckBox.py  __init__.py
src/exhelper/view/: CheckDefectFrame.py  ComparisonFrame.py  MainFrame.py  __init__.py
tests/: abstract.txt  claim.txt  conftest.py  description.txt  fignum.txt
tests/unit/: test_abstract_model.py  test_claim_model.py  test_comparison_model.py  test_config_model.py  test_description_model.py  test_search_model.py
