[project]
name = "ExHelper"
version = "0.1.0"
description = "This is a patent examination helper."
authors = [
    {name = "chenyulue", email = "chenyulue@163.com"},
]
dependencies = [
    "customtkinter>=5.2.2",
    "pillow==10.2.0",
    "CTkSpinbox>=1.4.1",
    "cydifflib>=1.1.0",
    "ctktooltip>=0.8",
    "ctkmessagebox>=2.7",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
exhelper = "exhelper.__main__:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.2.2",
]